<?xml version="1.0"?>
<package format="2">
  <name>tb3_autonomy</name>
  <version>0.0.0</version>
  <description>Simple autonomy examples for TurtleBot3</description>

 <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>actionlib</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>image_transport</depend>
  <depend>tb3_worlds</depend>
  <depend>behaviortree_cpp_v3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
