<?xml version="1.0"?>
<package format="2">
  <name>tb3_autonomy</name>
  <version>0.0.0</version>
  <description>Simple autonomy examples for TurtleBot3</description>

  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tb3_worlds</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
