<?xml version="1.0"?>
<package format="2">
  <name>tb_worlds</name>
  <version>0.0.0</version>
  <description>Simple world examples for TurtleBot simulation.</description>

  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_minimal_tb3_sim</depend>
  <depend>nav2_minimal_tb4_sim</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
